--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.realmofevil.automation</groupId>
+    <groupId>dev.realmofevil</groupId>
     <artifactId>automation</artifactId>
-    <version>0.2.3-SNAPSHOT</version>
+    <version>0.3.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Automation Skeleton</name>
