--- a/src/main/resources/suites/smoke.yaml
+++ b/src/main/resources/suites/smoke.yaml
@@ -10,7 +10,16 @@ suite:
 
   tests:
     - class: dev.realmofevil.automation.tests.common.UserBalanceTest
-      tags: [payments]
+      tags: [payment]
 
     - class: dev.realmofevil.automation.tests.DynamicSmokeTest
       tags: [api, smoke]
+
+
+
+
+name: "Smoke Test Suite"
+targetOperators: ["ALL"] # or ["gmail"]
+tests:
+  - className: "dev.realmofevil.automation.tests.smoke.UserBalanceTest"
+    tags: ["critical", "payment"]
