--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>dev.realmofevil</groupId>
   <artifactId>automation</artifactId>
-  <version>0.6.3</version>
+  <version>0.6.4</version>
 
   <name>Automation Engine Skeleton</name>
   <description>A platform to execute or run suites with tests</description>
@@ -16,8 +16,10 @@
     <java.version>21</java.version>
     <junit.jupiter.version>5.14.1</junit.jupiter.version>
     <junit.platform.version>1.14.1</junit.platform.version>
+    <snakeyaml.version>2.5</snakeyaml.version>
+    <jackson.version>2.20.1</jackson.version>
     <allure.version>2.32.0</allure.version>
-    <slf4j-simple.version>2.0.17</slf4j-simple.version>
+    <slf4j-api.version>2.0.17</slf4j-api.version>
     <surefire.version>3.2.5</surefire.version>
     <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
     <maven.compiler.release>${java.version}</maven.compiler.release>
@@ -39,12 +41,12 @@
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>2.5</version>
+      <version>${snakeyaml.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.20.1</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>io.qameta.allure</groupId>
@@ -58,8 +60,8 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>${slf4j-simple.version}</version>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j-api.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rabbitmq</groupId>
@@ -80,6 +82,11 @@
       <groupId>com.oracle.database.jdbc</groupId>
       <artifactId>ojdbc11</artifactId>
       <version>23.3.0.23.09</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.ignite</groupId>
+      <artifactId>ignite-core</artifactId>
+      <version>3.1.0</version>
     </dependency>
   </dependencies>
 
