--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,21 @@
 
   <groupId>dev.realmofevil</groupId>
   <artifactId>automation</artifactId>
-  <version>0.6.8</version>
+  <version>0.6.9</version>
 
   <name>Automation Engine Skeleton</name>
   <description>A platform to execute or run suites with tests</description>
 
   <properties>
     <java.version>21</java.version>
-    <junit.jupiter.version>5.14.1</junit.jupiter.version>
-    <junit.platform.version>1.14.1</junit.platform.version>
+    <junit.jupiter.version>5.10.3</junit.jupiter.version>
+    <junit.platform.version>1.10.3</junit.platform.version>
     <snakeyaml.version>2.5</snakeyaml.version>
     <jackson.version>2.20.1</jackson.version>
     <allure.version>2.32.0</allure.version>
-    <slf4j-api.version>2.0.17</slf4j-api.version>
-    <surefire.version>3.2.5</surefire.version>
-    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+    <slf4j-simple.version>2.0.17</slf4j-simple.version>
+    <surefire.version>3.5.4</surefire.version>
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -60,8 +60,8 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j-api.version}</version>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${slf4j-simple.version}</version>
     </dependency>
     <dependency>
       <groupId>com.rabbitmq</groupId>
@@ -94,6 +94,14 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.12.1</version>
+        <configuration>
+          <release>${java.version}</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.5.1</version>
         <executions>
@@ -108,22 +116,40 @@
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>dev.realmofevil.automation.launcher.AutomationLauncher</mainClass>
                 </transformer>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
               </transformers>
             </configuration>
           </execution>
         </executions>
       </plugin>
+      <!-- Maven Surefire Plugin for running tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.version}</version>
         <configuration>
-          <useModulePath>false</useModulePath>
+          <!-- Critical: Disable standard discovery -->
+          <includes>
+              <include>**/AutomationTestSuite.java</include>
+          </includes>
+          <!-- Explicitly exclude the raw test definitions to prevent standalone execution -->
+          <excludes>
+              <exclude>**/*Test.java</exclude>
+          </excludes>
+          <properties>
+            <configurationParameters>
+              junit.jupiter.execution.parallel.enabled = true
+              junit.jupiter.execution.parallel.mode.default = same_thread
+              junit.jupiter.execution.parallel.mode.classes.default = concurrent
+            </configurationParameters>
+          </properties>
           <systemPropertyVariables>
             <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
           </systemPropertyVariables>
         </configuration>
       </plugin>
+      <!-- Allure Maven Plugin for report generation -->
       <plugin>
         <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
