--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>dev.realmofevil</groupId>
   <artifactId>automation</artifactId>
-  <version>0.6.9</version>
+  <version>0.6.10</version>
 
   <name>Automation Engine Skeleton</name>
   <description>A platform to execute or run suites with tests</description>
@@ -17,7 +17,7 @@
     <junit.jupiter.version>5.10.3</junit.jupiter.version>
     <junit.platform.version>1.10.3</junit.platform.version>
     <snakeyaml.version>2.5</snakeyaml.version>
-    <jackson.version>2.20.1</jackson.version>
+    <jackson.version>2.21.0</jackson.version>
     <allure.version>2.32.0</allure.version>
     <slf4j-simple.version>2.0.17</slf4j-simple.version>
     <surefire.version>3.5.4</surefire.version>
@@ -39,9 +39,9 @@
       <version>${junit.platform.version}</version>  <!-- Must match the JUnit Jupiter version -->
     </dependency>
     <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-      <version>${snakeyaml.version}</version>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
