v.0.6.12 - added a general logout support, a  global default timeout, and XPath support

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,2 +1,13 @@
+# Enable Parallel Execution
 junit.jupiter.execution.parallel.enabled=true
+
+# Execute tests (methods) within a class/container in parallel
 junit.jupiter.execution.parallel.mode.default=concurrent
+
+# Execute top-level classes (Operator Containers) in parallel
+junit.jupiter.execution.parallel.mode.classes.default=concurrent
+
+# Control the global thread pool size (e.g., fixed size)
+# If using 'parallelism' from YAML, rely on the Semaphore in AccountPool to throttle.
+junit.jupiter.execution.parallel.config.strategy=fixed
+junit.jupiter.execution.parallel.config.fixed.parallelism=12
