--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 
   <groupId>dev.realmofevil</groupId>
   <artifactId>automation</artifactId>
-  <version>0.6.12</version>
+  <version>0.6.13</version>
 
-  <name>Automation Engine Skeleton</name>
+  <name>Automation Engine</name>
   <description>A platform to execute or run suites with tests</description>
 
   <properties>
